<resources>
    <string name="app_name">VIT_AP_Night Canteen</string>
    <string name="you_are_a">You are a</string>
    <string name="student_login">STUDENT LOGIN</string>
    <string name="staff_login">STAFF LOGIN</string>
    <string name="student">Student</string>
    <string name="staff">STAFF</string>
    <string name="hello">Hello</string>
    <string name="search_for_food">Search for food</string>
    <string name="items">Items</string>
    <string name="pizza">Pizza</string>
    <string name="plus">+</string>
    <string name="sausage">Sausage</string>
    <string name="minus">-</string>
    <string name="_0">0</string>
    <string name="pizza1">Pizza</string>
    <string name="hello_student">Hello Mayank!</string>
    <string name="availability">Availability:0 </string>
    <string name="availability_0">Availability: 0</string>
    <string name="chicken_n_noodles">Chicken\nNoodles</string>
    <string name="veg_sandwich">Veg\nSandwich</string>
    <string name="chicken_sandwich">Chicken\nSandwich</string>
    <string name="veg_noodles">Veg\nNoodles</string>
    <string name="watermelon_njuice">Watermelon\nJuice</string>
    <string name="add">Add</string>
    <string name="amount_payable">Amount payable:</string>
    <string name="hello_soundarya">Hello Soundarya!</string>
    <string name="hello_nikhil">Hello Nikhil</string>
    <string name="submit">Submit</string>
    <string name="hello_user">Hello User</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="add_items">ADD ITEMS</string>
    <string name="total_items">Total Items:</string>
    <string name="emp_id">EMP ID</string>
    <string name="enter_price">Enter Price</string>
    <string name="veg_noodles1">Veg Noodles</string>
    <string name="item">Item</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
</resources>