<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/user_bg"
    tools:context=".Staff_page">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="79dp"
        android:gravity="center"

        android:textAlignment="center"
        android:textColor="@color/purple_700"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="-5dp">

    </TextView>

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="406dp"
        android:layout_height="591dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:windowSoftInputMode="adjustNothing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ExtraText">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:windowSoftInputMode="adjustNothing"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!--                <ImageView-->
                <!--                    android:id="@+id/imageView4"-->
                <!--                    android:layout_width="wrap_content"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:padding="25dp"-->
                <!--                    app:srcCompat="@drawable/noodle" />-->


                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="179dp"
                    android:layout_height="wrap_content"
                    android:padding="25dp"
                    android:text="@string/veg_noodles1"
                    android:textAlignment="center"
                    android:textColor="@color/purple_700"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/veg_nood"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="number"
                    android:padding="7dp"

                    android:text="@string/_0"
                    android:textAlignment="center"
                    android:textColor="@color/purple_700"
                    android:textColorHint="@color/black"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/veg_nood_amt"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:ems="10"
                    android:inputType="number"
                    android:padding="7dp"
                    android:text="@string/_0"
                    android:textAlignment="center"
                    android:textColor="@color/purple_700"
                    android:textColorHint="@color/black"
                    android:textSize="14sp" />


            </LinearLayout>

            <Button
                android:id="@+id/update1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Update"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="179dp"
                    android:layout_height="wrap_content"
                    android:padding="25dp"
                    android:text="@string/chicken_n_noodles"
                    android:textAlignment="center"
                    android:textColor="@color/purple_700"
                    android:textSize="25sp" />


                <EditText
                    android:id="@+id/chick_nood"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="number"
                    android:padding="5dp"
                    android:text="@string/_0"
                    android:textAlignment="center"
                    android:textColor="@color/purple_700"
                    android:textColorHint="@color/black"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/chick_nood_amt"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:ems="10"
                    android:inputType="number"
                    android:padding="5dp"
                    android:text="@string/_0"
                    android:textAlignment="center"
                    android:textColor="@color/purple_700"
                    android:textColorHint="@color/black"
                    android:textSize="14sp" />


            </LinearLayout>


            <Button
                android:id="@+id/update2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Update"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="179dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="25dp"
                    android:text="@string/veg_sandwich"
                    android:textAlignment="center"
                    android:textColor="@color/purple_700"
                    android:textSize="25sp" />


                <EditText
                    android:id="@+id/veg_sand"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="number"
                    android:padding="5dp"
                    android:text="@string/_0"

                    android:textAlignment="center"
                    android:textColor="@color/purple_700"
                    android:textColorHint="@color/black"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/veg_sand_amt"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:ems="10"
                    android:inputType="number"
                    android:padding="5dp"
                    android:text="@string/_0"

                    android:textAlignment="center"
                    android:textColor="@color/purple_700"
                    android:textColorHint="@color/black"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />


            </LinearLayout>

            <Button
                android:id="@+id/update3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Update"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="179dp"
                    android:layout_height="wrap_content"
                    android:padding="25dp"
                    android:text="@string/chicken_sandwich"
                    android:textAlignment="center"
                    android:textColor="@color/purple_700"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/chick_sand"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:ems="10"
                    android:gravity="center"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:padding="5dp"
                    android:text="@string/_0"
                    android:textAlignment="center"
                    android:textColor="@color/purple_700"
                    android:textColorHint="@color/black"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/chick_sand_amt"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:ems="10"
                    android:inputType="number"
                    android:padding="5dp"
                    android:text="@string/_0"
                    android:textAlignment="center"
                    android:textColor="@color/purple_700"
                    android:textColorHint="@color/black"
                    android:textSize="14sp" />


            </LinearLayout>

            <Button
                android:id="@+id/update4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Update"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="179dp"
                    android:layout_height="wrap_content"
                    android:padding="24dp"
                    android:paddingTop="20dp"
                    android:text="@string/watermelon_njuice"
                    android:textAlignment="center"
                    android:textColor="@color/purple_700"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/watermelon"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="number"
                    android:padding="5dp"
                    android:text="@string/_0"

                    android:textAlignment="center"
                    android:textColor="@color/purple_700"
                    android:textColorHint="@color/black"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/watermelon_amt"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:ems="10"
                    android:inputType="number"

                    android:padding="5dp"
                    android:text="@string/_0"

                    android:textAlignment="center"
                    android:textColor="@color/purple_700"
                    android:textColorHint="@color/black"
                    android:textSize="14sp" />


            </LinearLayout>


            <Button
                android:id="@+id/update5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Update"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:paddingTop="20dp">

                <Button
                    android:id="@+id/add"
                    android:layout_width="188dp"
                    android:layout_height="wrap_content"
                    android:width="100dp"
                    android:backgroundTint="#f76e11"
                    android:text="Add Total"
                    android:textAlignment="center"
                    android:textColor="@color/purple_700"
                    android:textSize="20sp"
                    tools:layout_editor_absoluteX="91dp"
                    tools:layout_editor_absoluteY="80dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:paddingTop="20dp">

                <TextView
                    android:id="@+id/items"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_items"
                    android:textColor="@color/purple_700"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:paddingTop="20dp"/>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="410dp"
        android:layout_height="34dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="179dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/item"
            android:textAlignment="center"
            android:textColor="@color/purple_700"
            android:textSize="25sp"
            android:textStyle="bold">


        </TextView>

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/quantity"
            android:textAlignment="center"
            android:textColor="@color/purple_700"
            android:textSize="25sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/price"
            android:textAlignment="center"
            android:textColor="@color/purple_700"
            android:textSize="25sp"
            android:textStyle="bold">

        </TextView>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>